--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Adobe Express - file (1).png" />
+    <link rel="shortcut icon" type="image/png" href="/Adobe Express - file (1).png" />
         <link rel="icon" type="image/png" href="../frontend/public/Adobe Express - file (1).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
