--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" type="image/png" href="/Adobe Express - file (1)-removebg-preview.jpg" />
-        <link rel="icon" type="image/png" href="../frontend/public/Adobe Express - file (1)-removebg-preview.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="/Adobe Express - file (1)-removebg-preview.jpg" />
+        <link rel="icon" type="image/jpg" href="../frontend/public/Adobe Express - file (1)-removebg-preview.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
